add smart app banner

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta name="description" content="Yakpot iPhone Games" />
   <meta name="keywords" content="iphone, games, falling monk, yakpot" />
   <meta name="author" content="Yakpot" />
+  <meta name="apple-itunes-app" content="app-id=466328829" />
   <meta charset="utf-8" />
   <title>Yakpot - Falling Monk is now available on the App Store</title>
   <link rel="shortcut icon" href="favicon.ico" />
